--- a/vignettes/umap_color_repel.Rmd
+++ b/vignettes/umap_color_repel.Rmd
@@ -1,21 +1,35 @@
 ```{r}
 library(tidyverse)
-source("../R/color_repel.R")
+library(colorrepel)
+# source("../R/color_repel.R")
 ```
 
 ```{r}
 a <- readRDS("umap_gg.rds")
 b <- a + scale_color_manual(values = color_repel(a, sim = colorspace::tritan))
-cowplot::plot_grid(a, b, 
-                   labels = c("original", "color_repel"))
+cowplot::plot_grid(a, b,
+  labels = c("original", "color_repel")
+)
 ggsave("scRNAseqUMAP_example.png", width = 7, height = 3)
 ```
 
 ```{r}
 a <- readRDS("vln_gg.rds")
 b <- a + scale_fill_manual(values = color_repel(a, sim = colorspace::tritan, col = "fill"))
-cowplot::plot_grid(a, b, 
-                   labels = c("original", "color_repel"))
+cowplot::plot_grid(a, b,
+  labels = c("original", "color_repel")
+)
 ggsave("scRNAseqVln_example.png", width = 7, height = 3)
+```
+
+```{r}
+library(ggplot2)
+a <- ggplot(mpg, aes(displ, hwy, fill = class)) +
+  geom_boxplot() +
+  theme_classic()
+b <- a + scale_color_manual(values = color_repel(a, sim = colorspace::tritan))
+cowplot::plot_grid(a, b,
+  labels = c("original", "color_repel")
+)
 ```
 
