--- a/vignettes/umap_color_repel.Rmd
+++ b/vignettes/umap_color_repel.Rmd
@@ -33,3 +33,11 @@ cowplot::plot_grid(a, b,
 )
 ```
 
+```{r}
+a <- readRDS("bar_gg.rds")
+b <- a + scale_fill_viridis_d(option = "H")
+c <- b + scale_fill_manual(values = color_repel(b, col = "fill"))
+cowplot::plot_grid(a,b,c, labels = c("default", "viridis", "color_repel"), nrow = 1)
+# ggsave("stackbar_example.png", width = 18, height = 4)
+```
+
